# hebbs-python

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DEMO_DEV.md  README.md  RELEASE_GUIDE.md  SETUP.md  SKILL.md  astro.config.mjs  example-coding-agent-session.md  package.json  pyproject.toml
.cursor/rules/: cross-component-consistency.mdc
.github/workflows/: ci.yml  deploy.yml  nightly.yml  release.yml
crates/hebbs-core/: Cargo.toml
crates/hebbs-embed/: Cargo.toml
crates/hebbs-embed/src/: api.rs  lib.rs  model.rs  onnx.rs
crates/hebbs-python-native/: Cargo.toml
crates/hebbs-reflect/: Cargo.toml
crates/hebbs-vault/: Cargo.toml
crates/hebbs-vault/src/: config.rs  error.rs  extract.rs  ingest.rs  insight_writer.rs  lib.rs  manifest.rs  parser.rs  query.rs  query_log.rs  watcher.rs
crates/hebbs-vault/src/daemon/: client.rs  mod.rs  protocol.rs  vault_manager.rs
crates/hebbs-vault/src/panel/: mod.rs  routes.rs
crates/hebbs-vault/src/panel/static/: app.js  graph.js  index.html  panel.css
demo/: cli.py
demo/src/: index.ts
docs/: BenchmarksAndProofs.md  DocsSummary.md  FINAL-README-WHEN-DONE.md  GuidingPrinciples.md  MonetizationStrategy.md  PLAN-policy-bootstrap.md  PhasePlan.md  ProblemStatement.md  RepositoryStructure.md  ScalabilityArchitecture.md  TASK-01-openclaw-skill-issues.md  TASK-02-killer-demo-strategy.md  TASK-03-skill-e2e-fixes.md  TASK-04-tenant-key-management-e2e.md  TASK-05-sdk-parity-and-validation.md  TASK-06-agent-driven-reflect-and-skill.md  TASK-07-reflect-mock-fallback-transparency.md  TASK-08-prime-entity-partitioned-hnsw.md  TASK-09-e2e-test-coverage-gaps.md  TESTRUN-01-pythonsdktest.md  TEST_ANALYSIS_MAR9_TYPESCRIPT.md  TechnologyStack.md  UseCaseAnalysis-VoiceSalesAgent.md  hebbs-docs-phases-master.md  openclaw-e2e-findings.md  openclaw-e2e-transcript.md  python-sdk-parity.md
docs/hebbs-demo/: ERGONOMICS_REPORT.md
examples/: README.md  requirements.txt
experience-demo/: README.md  middleware.ts  next.config.mjs  package-lock.json  package.json  tailwind.config.js
hebbs/: Cargo.toml  LICENSE-BSL  README.md
hebbs-deploy/: .gitignore  README.md
hebbs-docs/: package-lock.json
hebbs-website/: .gitignore  wrangler.jsonc
hebbs/docker/: Dockerfile
legal/: ip-ownership-guide.md
src/: client.ts  index.ts  proto.ts  types.ts
tests/: test_types_unit.py
tune/: SKILL.md
(+272 files in other folders)
