[package]
name = "hebbs-vault"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
license = "BSL-1.1"
description = "File-first markdown sync: content plane / cognition plane architecture for HEBBS"

[[bin]]
name = "hebbs-vault"
path = "src/bin/hebbs_vault.rs"

[dependencies]
hebbs-core = { path = "../hebbs-core" }
hebbs-embed = { path = "../hebbs-embed" }
hebbs-index = { path = "../hebbs-index" }
hebbs-storage = { path = "../hebbs-storage" }

serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
sha2 = { workspace = true }
hex = { workspace = true }
toml = { workspace = true }
ulid = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
notify = { version = "6", features = ["macos_fsevent"] }
slug = "0.1"
regex = "1"
tokio-util = { version = "0.7", features = ["rt"] }
globset = "0.4"
clap = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
proptest = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
